After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 643683 - Something broke _NET_WM_PING?
Something broke _NET_WM_PING?
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
: 643900 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-03-02 16:14 UTC by Owen Taylor
Modified: 2011-03-18 18:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Update meta_show_dialog for gtk's removal of --screen (6.19 KB, patch)
2011-03-17 13:57 UTC, Dan Winship
committed Details | Review

Description Owen Taylor 2011-03-02 16:14:12 UTC
Appears that _NET_WM_PING isn't working correctly for gnome-shell. FReported by Mike Schmidt in:

https://bugzilla.redhat.com/show_bug.cgi?id=681504

I was able to reproduce in a quick test with a random GTK+ program. I'd guess one or the other of:

 - Something broke in event handling
 - Something broke with actually showing the dialog

First step would be to test raw mutter without gnome-shell.

== original report ==
Description of problem:
Metacity and compiz could detect when an application was unresponsive for
several seconds and could offer the user to force quit the window.
Mutter/gnome-shell does not seem to do that. Clicking the close button of an
unresponsive window has no effect.

Version-Release number of selected component (if applicable):
gnome-shell-2.91.90-2.fc15.x86_64
mutter-2.91.90-2.fc15.x86_64

How reproducible:
always

Steps to Reproduce:
1. run the attached reproducer (a simple pygtk application)
2. click on the "Hang this application" button
3. try to close the window

Actual results:
Nothing happens, the window won't go away.

Expected results:
The window manager should offer me to force the closing of the window / kill
the unresponsive application.
Comment 1 Giovanni Campagna 2011-03-02 16:40:38 UTC
I can't reproduce with gnome-shell/mutter from git, and a python gtk2 test program stopped with ^z.
After clicking on close, and waiting two seconds, I see a "Force exit" window.
Comment 2 Owen Taylor 2011-03-04 23:19:23 UTC
*** Bug 643900 has been marked as a duplicate of this bug. ***
Comment 3 Michal Schmidt 2011-03-09 09:19:02 UTC
It is still reproducible today with:
gnome-shell-2.91.91-1.fc15.x86_64
mutter-2.91.91-1.fc15.x86_64

No "Force exit" window ever appears here.
Comment 4 Dan Winship 2011-03-17 13:57:31 UTC
Created attachment 183626 [details] [review]
Update meta_show_dialog for gtk's removal of --screen

gtk3 no longer has the --screen command-line argument, which mutter
was passing to zenity. Use --display (with an explicitly-specified
screen number) instead.
Comment 5 Dan Winship 2011-03-18 17:55:31 UTC
Comment on attachment 183626 [details] [review]
Update meta_show_dialog for gtk's removal of --screen

oops, I just accidentally committed this... someone figure out if I
should revert
Comment 6 Owen Taylor 2011-03-18 18:08:16 UTC
Review of attachment 183626 [details] [review]:

Looks fine to me. (Might have suggested passing in the MetaScreen for a bit of type safety, but not worth a fixup patch on top.)