src/meta/util.h
@@ -105,9 +105,9 @@ char* meta_g_utf8_strndup (const gchar *src, gsize n);
 void  meta_free_gslist_and_elements (GSList *list_to_deep_free);
 
 GPid meta_show_dialog (const char *type,
-                       const char *title,
                        const char *message,
-                       gint timeout,
+                       const char *timeout,
+                       const char *display,
                        const char *ok_text,
                        const char *cancel_text,
                        const int transient_for,
